serd (1.1.1) unstable; urgency=medium

  * Add SerdBuffer for mutable buffers to keep SerdChunk const-correct
  * Add SerdWorld for shared library state
  * Add option for writing terse output without newlines
  * Add support for writing terse collections
  * Add support for xsd:float and xsd:double literals
  * Bring read/write interface closer to C standard
  * Improve error handling
  * Make nodes opaque
  * Remove SERD_DISABLE_DEPRECATED and SERD_DEPRECATED_BY
  * Remove serd_uri_to_path()
  * Remove support for Turtle named inline nodes extension
  * Remove useless character counting from API
  * Rename SerdChunk to SerdStringView
  * Simplify streaming API and improve pretty printing
  * Simplify writer style options
  * Use a fixed-size reader stack
  * Use char* for strings in public API

 -- David Robillard <d@drobilla.net>  Wed, 13 Jul 2022 20:39:07 +0000

serd (0.31.0) unstable; urgency=medium

  * Add Windows path separator support to serd_node_new_file_uri()
  * Add serd_reader_skip_until_byte() to public API
  * Allow SERD_API to be defined by the user
  * Avoid creating test files in the current directory
  * Avoid using ASCII grave as a quote
  * Clean up code
  * Fix crash when trying to read chunks without starting
  * Fix hang when skipping an error at EOF when lax parsing
  * Gracefully handle bad characters in Turtle blank node syntax
  * Gracefully handle bad characters in Turtle datatype syntax
  * Improve serdi man page
  * Override pkg-config dependency within meson
  * Replace duplicated dox_to_sphinx script with sphinxygen dependency
  * Test header for warnings more strictly

 -- David Robillard <d@drobilla.net>  Tue, 20 Dec 2022 12:31:33 +0000

serd (0.30.16) stable; urgency=medium

  * Add SERD_STATIC to pkg-config Cflags for static-only builds
  * Adopt REUSE machine-readable licensing standard
  * Allow programs to be used from subproject
  * Fix spelling mistake in serdi man page
