@@ -8,7 +8,7 @@
 .Nd read and write RDF syntax
 .Sh SYNOPSIS
 .Nm serdi
-.Op Fl abefhlqtv
+.Op Fl abefhlqtvx
 .Op Fl I Ar base
 .Op Fl c Ar prefix
 .Op Fl i Ar syntax
@@ -170,6 +170,13 @@ Write terser output without newlines.
 .Pp
 .It Fl v
 Display version information and exit.
+.Pp
+.It Fl x
+Support parsing variable nodes.
+Variables can be written in SPARQL style, for example
+.Dq ?var
+or
+.Dq $var .
 .El
 .Sh EXIT STATUS
 .Nm
