@@ -903,6 +903,18 @@ write_blank(SerdWriter* const        writer,
 }
 
 SERD_WARN_UNUSED_RESULT static SerdStatus
+write_variable(SerdWriter* const writer, const SerdNode* const node)
+{
+  SerdStatus st = SERD_SUCCESS;
+
+  TRY(st, esink("?", 1, writer));
+  TRY(st, esink(serd_node_string(node), node->length, writer));
+
+  writer->last_sep = SEP_NONE;
+  return st;
+}
+
+SERD_WARN_UNUSED_RESULT static SerdStatus
 write_node(SerdWriter* const        writer,
            const SerdNode* const    node,
            const SerdField          field,
@@ -922,6 +934,9 @@ write_node(SerdWriter* const        writer,
     break;
   case SERD_BLANK:
     st = write_blank(writer, node, field, flags);
+    break;
+  case SERD_VARIABLE:
+    st = write_variable(writer, node);
     break;
   }
 
