@@ -1,0 +1,89 @@
+@prefix mf: <http://www.w3.org/2001/sw/DataAccess/tests/test-manifest#> .
+@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
+@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
+@prefix rdft: <http://www.w3.org/ns/rdftest#> .
+
+<>
+	rdf:type mf:Manifest ;
+	rdfs:comment "Serd pattern syntax test cases" ;
+	mf:entries (
+		<#bad-pattern-graph-nq>
+		<#bad-pattern-object-nq>
+		<#bad-pattern-object-nt>
+		<#bad-pattern-object-ttl>
+		<#bad-pattern-predicate-nq>
+		<#bad-pattern-predicate-nt>
+		<#bad-pattern-predicate-ttl>
+		<#bad-pattern-subject-nq>
+		<#bad-pattern-subject-nt>
+		<#bad-pattern-subject-ttl>
+		<#test-graph-pattern>
+		<#test-pattern-nt>
+		<#test-pattern-ttl>
+	) .
+
+<#bad-pattern-graph-nq>
+	rdf:type rdft:TestNQuadsNegativeSyntax ;
+	mf:name "bad-pattern-graph-nq" ;
+	mf:action <bad-pattern-graph.nq> .
+
+<#bad-pattern-object-nq>
+	rdf:type rdft:TestNQuadsNegativeSyntax ;
+	mf:name "bad-pattern-object-nq" ;
+	mf:action <bad-pattern-object.nq> .
+
+<#bad-pattern-object-nt>
+	rdf:type rdft:TestNTriplesNegativeSyntax ;
+	mf:name "bad-pattern-object-nt" ;
+	mf:action <bad-pattern-object.nt> .
+
+<#bad-pattern-object-ttl>
+	rdf:type rdft:TestTurtleNegativeSyntax ;
+	mf:name "bad-pattern-object-ttl" ;
+	mf:action <bad-pattern-object.ttl> .
+
+<#bad-pattern-predicate-nq>
+	rdf:type rdft:TestNQuadsNegativeSyntax ;
+	mf:name "bad-pattern-predicate-nq" ;
+	mf:action <bad-pattern-predicate.nq> .
+
+<#bad-pattern-predicate-nt>
+	rdf:type rdft:TestNTriplesNegativeSyntax ;
+	mf:name "bad-pattern-predicate-nt" ;
+	mf:action <bad-pattern-predicate.nt> .
+
+<#bad-pattern-predicate-ttl>
+	rdf:type rdft:TestTurtleNegativeSyntax ;
+	mf:name "bad-pattern-predicate-ttl" ;
+	mf:action <bad-pattern-predicate.ttl> .
+
+<#bad-pattern-subject-nq>
+	rdf:type rdft:TestNQuadsNegativeSyntax ;
+	mf:name "bad-pattern-subject-nq" ;
+	mf:action <bad-pattern-subject.nq> .
+
+<#bad-pattern-subject-nt>
+	rdf:type rdft:TestNTriplesNegativeSyntax ;
+	mf:name "bad-pattern-subject-nt" ;
+	mf:action <bad-pattern-subject.nt> .
+
+<#bad-pattern-subject-ttl>
+	rdf:type rdft:TestTurtleNegativeSyntax ;
+	mf:name "bad-pattern-subject-ttl" ;
+	mf:action <bad-pattern-subject.ttl> .
+
+<#test-graph-pattern>
+	rdf:type rdft:TestNQuadsPositiveSyntax ;
+	mf:name "test-graph-pattern" ;
+	mf:action <test-graph-pattern.nq> .
+
+<#test-pattern-nt>
+	rdf:type rdft:TestNTriplesPositiveSyntax ;
+	mf:name "test-pattern-nt" ;
+	mf:action <test-pattern.nt> .
+
+<#test-pattern-ttl>
+	rdf:type rdft:TestTurtleEval ;
+	mf:name "test-pattern" ;
+	mf:action <test-pattern.ttl> ;
+	mf:result <test-pattern.nt> .
