@@ -3,6 +3,7 @@ serd (1.1.1) unstable; urgency=medium
   * Add SerdBuffer for mutable buffers to keep SerdChunk const-correct
   * Add SerdWorld for shared library state
   * Add option for writing terse output without newlines
+  * Add support for parsing variables
   * Add support for writing terse collections
   * Add support for xsd:float and xsd:double literals
   * Bring read/write interface closer to C standard
@@ -18,7 +19,7 @@ serd (1.1.1) unstable; urgency=medium
   * Use a fixed-size reader stack
   * Use char* for strings in public API
 
- -- David Robillard <d@drobilla.net>  Wed, 13 Jul 2022 20:39:07 +0000
+ -- David Robillard <d@drobilla.net>  Wed, 13 Jul 2022 21:28:58 +0000
 
 serd (0.31.0) unstable; urgency=medium
 
